added code matches example feedback in editor

--- a/server/public/css/app.css
+++ b/server/public/css/app.css
@@ -26,6 +26,13 @@ button.disabled, input.disabled{
 	opacity: 0.3;
 }
 
+mus-code-matches {
+	display: block;
+}
+div.match-example {
+	display: inline-block;
+}
+
 mus-projection {
 	display: inline-block;
 }
