added play example with simple audioout

--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -148,6 +148,7 @@
 			<button ng-click="deleteExample($index)">-</button>
 			<mus-projection-choice projection="example.projection" projections="projections"></mus-projection-choice>
 			<muzicode notes="example.rawnotes" projection="example.projection" projections="projections" context="example.context"></muzicode>
+			<button ng-click="playExample(example)">Play</button>
 			<div uib-collapse="isCollapsed">
 				<div note-roll notes="example.rawnotes" parameters="parameters" context="example.context"></div>
 				<mus-context context="example.context"></mus-context>
