reorganise editor UI layout with 2 tabbed areas

--- a/server/public/partials/mus-projection.html
+++ b/server/public/partials/mus-projection.html
@@ -1,5 +1,5 @@
 <table><tbody>
-  <tr><td><label>Projection name</label></td>
+  <tr><td><label>Transformation name</label></td>
       <td><input type="text" ng-model="projection.id"></td></tr>
   <tr><td><label>Beat Quantisation (per beat)</label></td>
       <td><input type="number" step="1" ng-model="projection.countsPerBeat"></td></tr>
