--- a/server/public/css/app.css
+++ b/server/public/css/app.css
@@ -1,5 +1,8 @@
 li.marker {
   list-style-type: none;
+  padding-top: 6px;
+  border-top: 1px solid grey;
+  margin-top: 6px;
 }
 ul.markers {
   padding: 0;
@@ -7,6 +10,9 @@ ul.markers {
 
 li.example {
   list-style-type: none;
+  padding-top: 6px;
+  border-top: 1px solid grey;
+  margin-top: 6px;
 }
 ul.examples {
   padding: 0;
@@ -45,3 +51,23 @@ span.code-error {
 	color: red;
 }
 
+div.top-panel {
+	position: fixed;
+	bottom: 60%;
+	right: 0;
+	left: 0;
+	top: 0;
+	overflow: scroll;
+	border-bottom: 2px black solid;
+}
+div.bottom-panel {
+	position: fixed;
+	top: 40%;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	overflow: scroll;
+}
+p.tab-intro {
+	margin-top: 6px;
+}
