--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -1,4 +1,27 @@
-  <h1><a href="#/">Musiccode Editor</a></h1>
+<form name="experienceForm" ng-submit=""> 
+<div class="top-panel"><div>
+	<!-- Nav tabs -->
+		<ul class="nav nav-tabs" role="tablist">
+			<li ng-class="{active:topTab==1}"><a href ng-click="setTopTab(1)">Edit</a></li>
+			<li ng-class="{active:topTab==2}"><a href ng-click="setTopTab(2)">1.
+				Input Source</a>
+			</li>
+			<li ng-class="{active:topTab==3}"><a href ng-click="setTopTab(3)">2.
+				Context Mapping</a>
+			</li>
+			<li ng-class="{active:topTab==4}"><a href ng-click="setTopTab(4)">3.
+				Note Filter/Grouping</a>
+			</li>
+			<li ng-class="{active:topTab==5}"><a href ng-click="setTopTab(5)">4.
+				Note Transformation</a>
+			</li>
+			<li ng-class="{active:topTab==6}"><a href ng-click="setTopTab(6)">5.
+				Conditional Matching</a>
+			</li>
+		</ul>
+
+<div ng-show="topTab==1">
+		<h4>Musiccode Editor</h4>
   <p>{{status}}</p>
   <p><label>Filename:</label><input type="text" ng-model="filename" ng-change="checkFilename()"> 
     <span>{{filenameStatus}}</span>
@@ -10,8 +33,7 @@
   </span>
   <p>Server {{serverProtocol}}//{{serverHost}}:{{serverPort}}</p>
   <hr>
-  <h2>Edit</h2>
-<form name="experienceForm" ng-submit=""> 
+  <!-- <h2>Edit</h2> -->
   <!-- dirty isn't working for adding/removing form sections -->
   <input type="submit" value="save" ng-disabled="!experienceForm.$dirty && !formChanged" ng-click="save()" ng-class="{'disabled': !experienceForm.$dirty && !formChanged}">
  {{ experienceForm.$dirty || formChanged ? 'Has unsaved changes' : 'No changes' }}
@@ -27,12 +49,15 @@
   </tbody></table>
 
 	<hr>
-	<h3>Overview</h3>
-	<p>1. Input Source -> 2. Context Mapping -> 3. Note Filter/Grouping -> 4. Note Transformations -> Examples -> 5. Conditional Matching -> 6. Codes and Actions -> 7. Outputs</p>
-	<hr>
-	<h3>Input</h3>
-	<h4>1. Input Source</h4>
-	<p>Specify the audio/Midi input: (leave Midi input blank to use the default audio input)</p>
+	<p><a href="#/">Back to experience list</a></p>
+
+	<!-- <h3>Overview</h3>
+	<p>1. Input Source -> 2. Context Mapping -> 3. Note Filter/Grouping -> 4. Note Transformations -> Examples -> 5. Conditional Matching -> 6. Codes and Actions -> 7. Outputs</p>-->
+</div>
+<div ng-show="topTab==2">
+	<!-- <h3>Input</h3>
+	<h4>1. Input Source</h4> -->
+	<p class="tab-intro">Specify the audio/Midi input: (leave Midi input blank to use the default audio input)</p>
 	<table>
 		<tbody>
 			<tr>
@@ -58,15 +83,19 @@
 		</tbody>
 	</table>
 
-	<h4>2. Context Mapping</h4>
+</div>
+<div ng-show="topTab==3">
+	<!-- <h4>2. Context Mapping</h4> -->
 	
-	<p>Specify the musical context of the incoming notes:</p>
+	<p class="tab-intro">Specify the musical context of the incoming notes:</p>
 	
 	<mus-context context="defaultContext"></mus-context> 
 	
-	<h4>3. Note Filter/Grouping</h4>
+</div>
+<div ng-show="topTab==4">
+	<!-- <h4>3. Note Filter/Grouping</h4> -->
 	
-	<p>Specify how notes are selected and grouped into phrases for matching:</p>
+	<p class="tab-intro">Specify how notes are selected and grouped into phrases for matching:</p>
 	
 	<table>
 		<tbody>
@@ -121,23 +150,77 @@
 		</tbody>
 	</table>
 
-	<h4>4. Note Transformations</h4>
+</div>
+<div ng-show="topTab==5">
+	<!-- <h4>4. Note Transformations</h4> -->
 	
-	<p>Specify options for transforming notes before they are matched to reduce "irrelevant" differences:</p>
+	<p class="tab-intro">Specify options for transforming notes before they are matched to reduce "irrelevant" differences:</p>
 	
 	<div ng-repeat="projection in projections" class="projection">
 		<mus-projection projection="projection"></mus-projection> 
-		<button ng-click="deleteProjection($index)">-</button>
+		<button ng-click="deleteProjection($index)" aria-label="Delete transformation"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
 	</div>
 	<div class="projection">
-    	<button ng-click="addProjection()">+</button>
+    	<button ng-click="addProjection()" aria-label="Add new transformation"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
 		<mus-projection projection="newProjection"></mus-projection> 
 	</div>
 	
-	<hr>
-	<h3>Examples</h3>
+</div>
+
+<div ng-show="topTab==6">
+
+	<!-- <hr>
+	<h3>Codes</h3>
+	<h4>5. Conditional Matching</h4> -->
 	
-	<p>Enter and test example phrases, and generate possible codes:</p>
+	<p class="tab-intro">Specify additional rules for when codes can be matched:</p>
+
+	<p>
+		<label>Show State:</label> <input type="checkbox" ng-model="showState">
+	</p>
+	<table>
+		<tbody>
+			<tr uib-collapse="!showState">
+				<td><label>Initial State</label></td>
+				<td>
+					<div class="var" ng-repeat="(var,value) in parameters.initstate">
+						<span>{{var}}</span>=<input type="text" size="6"
+							ng-model="parameters.initstate[var]">
+						<!-- 
+       -->
+						<button ng-click="deleteInitstate(var)" aria-label="Delete state"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+					</div>
+					<div class="var">
+						<button ng-click="addInitstate()" aria-label="Add new state"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+						<!-- 
+      	 -->
+						<input type="text" size="6" ng-model="newInitstateName">=<input
+							type="text" size="6" ng-model="newInitstateValue">
+					</div>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+
+</div>
+</div>
+<div class="bottom-panel"><div>
+	<!-- Nav tabs -->
+			<ul class="nav nav-tabs" role="tablist">
+				<li role="presentation" ng-class="{active:bottomTab==1}"><a href
+					ng-click="setBottomTab(1)">Examples</a></li>
+				<li role="presentation" ng-class="{active:bottomTab==2}"><a href
+					ng-click="setBottomTab(2)">6. Codes and Actions</a></li>
+				<li role="presentation" ng-class="{active:bottomTab==3}"><a href
+					ng-click="setBottomTab(3)">7. Outputs</a></li>
+			</ul>
+
+<div ng-show="bottomTab==1">
+	<!--  <hr>
+	<h3>Examples</h3>  -->
+	
+	<p class="tab-intro">Enter and test example phrases, and generate possible codes:</p>
 
 	<ul class="examples">
 		<li ng-repeat="example in examples" ng-controller="ExampleCtrl" class="example">
@@ -145,7 +228,7 @@
 			ng-class="{'glyphicon-triangle-right': isCollapsed, 'glyphicon-triangle-bottom': !isCollapsed}"
 			ng-click="isCollapsed=(!isCollapsed)"></span> 
 			<label>Title:</label> <input type="text" ng-model="example.title">
-			<button ng-click="deleteExample($index)">-</button>
+			<button ng-click="deleteExample($index)" aria-label="Delete example"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
 			<mus-projection-choice projection="example.projection" projections="projections"></mus-projection-choice>
 			<muzicode notes="example.rawnotes" projection="example.projection" projections="projections" context="example.context"></muzicode>
 			<button ng-click="playExample(example)">Play</button>
@@ -169,53 +252,22 @@
 		<br>
 		<div note-roll notes="addingExampleNotes" time="addingTime" groups="addingGroups" parameters="parameters" context="defaultContext"></div>
 	</li>
+</div>
+<div ng-show="bottomTab==2">
 
-	<hr>
-	<h3>Codes</h3>
-	<h4>5. Conditional Matching</h4>
-	
-	<p>Specify additional rules for when codes can be matched:</p>
+  <!-- <h4>6. Codes and Actions</h4> -->
 
-	<p>
-		<label>Show State:</label> <input type="checkbox" ng-model="showState">
-	</p>
-	<table>
-		<tbody>
-			<tr uib-collapse="!showState">
-				<td><label>Initial State</label></td>
-				<td>
-					<div class="var" ng-repeat="(var,value) in parameters.initstate">
-						<span>{{var}}</span>=<input type="text" size="6"
-							ng-model="parameters.initstate[var]">
-						<!-- 
-       -->
-						<button ng-click="deleteInitstate(var)">-</button>
-					</div>
-					<div class="var">
-						<button ng-click="addInitstate()">+</button>
-						<!-- 
-      	 -->
-						<input type="text" size="6" ng-model="newInitstateName">=<input
-							type="text" size="6" ng-model="newInitstateValue">
-					</div>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	
-  <h4>6. Codes and Actions</h4>
-
-	<p>Specify codes and actions to be performed:</p>
+	<p class="tab-intro">Specify codes and actions to be performed:</p>
 
   <ul class="markers">
     <li ng-repeat="marker in markers" ng-controller="MarkerCtrl" class="marker">
       <span class="glyphicon" aria-hidden="true" ng-class="{'glyphicon-triangle-right': isCollapsed, 'glyphicon-triangle-bottom': !isCollapsed}" ng-click="isCollapsed=(!isCollapsed)"></span>
       <label>Title:</label>
       <input type="text" ng-model="marker.title">
+      <button ng-click="deleteMarker($index)"  aria-label="Remove marker"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
       <mus-projection-choice projection="marker.projection" projections="projections"></mus-projection-choice>
       <!-- <input type="checkbox" ng-model="marker.inexact" ng-class="{'disabled': !isSimple}" ng-disabled="!isSimple">  -->
       <mus-code-input type="text" ng-model="marker.code"></mus-code-input>
-      <button ng-click="deleteMarker($index)">-</button>
       <div uib-collapse="isCollapsed">
       	<!-- <mus-inexact-parameters marker="marker" parameters="marker.inexactParameters" is-simple="isSimple"></mus-inexact-parameters> -->
 		<mus-code-matches examples="examples" code="marker.code" inexact="marker.inexact" inexact-parameters="marker.inexactParameters" projection="marker.projection" projections="projections" at-start="marker.atStart" at-end="marker.atEnd"></mus-code-matches>
@@ -237,10 +289,10 @@
           <input type="text" size="10" ng-model="action.channel">
           <label>URL:</label>
           <input type="text" ng-model="action.url"> <urlchecker ng-model="action.url"></urlchecker>
-          <button ng-click="deleteAction($index)">-</button>
+          <button ng-click="deleteAction($index)" aria-label="Remove action"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
         </li>
         <li >
-          <button ng-click="addAction()">+</button>
+          <button ng-click="addAction()" aria-label="Add action"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
           <label>Channel:</label>
           <input type="text" size="10" ng-model="marker.newActionChannel">
           <label>URL:</label>
@@ -250,7 +302,7 @@
       </div>
     </li>
     <li class="marker">
-      <button ng-click="addMarker()">+</button>
+      <button ng-click="addMarker()" aria-label="Add marker"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
       <label>Title:</label>
       <input type="text" ng-model="newMarkerTitle">
       <mus-projection-choice projection="newMarkerProjection" projections="projections"></mus-projection-choice>
@@ -258,10 +310,13 @@
    </li>
 </ul>
 
-	<hr>
-	<h3>7. Outputs</h3>
+</div>
+<div ng-show="bottomTab==3">
+
+	<!-- <hr>
+	<h3>7. Outputs</h3> -->
 	
-	<p>Specify outputs:</p>
+	<p class="tab-intro">Specify outputs:</p>
 	
 	<table>
 		<tbody>
@@ -272,5 +327,7 @@
 		</tbody>
 	</table>
 
+</div>
 
+</div></div>
 </form>
