--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -64,6 +64,10 @@
 				<td><label>Audio (default)</label></td>
 			</tr>
 			<tr>
+				<td><label>Audio Level</label></td>
+				<td><inputmeter></inputmeter></td>
+			</tr>
+			<tr>
 				<td><label>Instrument (Silvet plugin)</label></td>
 				<td><select ng-model="parameters.vampParameters.instrument"
 					ng-options="option.value as option.name for option in instrumentOptions">
