--- a/server/public/partials/mus-projection.html
+++ b/server/public/partials/mus-projection.html
@@ -1,11 +1,17 @@
 <table><tbody>
   <tr><td><label>Matching Profile name</label></td>
       <td><input type="text" ng-model="projection.id"></td></tr>
+</tbody></table>
+  
+<mus-filter-parameters parameters="projection.filterParameters"></mus-filter-parameters>
+      
+<table><tbody>
+  <tr><td>Quantisation:</td></tr>
   <tr><td><label>Beat Quantisation (per beat)</label></td>
       <td><input type="number" step="1" min="0" ng-model="projection.countsPerBeat"></td></tr>
   <tr><td><label>Pitch Quantisation (per semitone)</label></td>
       <td><input type="number" step="1" min="0" ng-model="projection.pitchesPerSemitone"></td></tr>
-  <tr><td><label>Inexact matching, timing:</label></td>
+  <tr><td>Inexact matching, timing:</td>
       <td></td></tr>
   <tr><td><label>Delay cost (default 1)</label></td>
       <td><input type="number" step="0.1" min="0" ng-model="projection.inexactParameters.delayError"></td></tr>
@@ -18,7 +24,7 @@
   <tr><td><label>Tempo max variation (fraction)</label></td>
       <td><input type="number" step="0.1" min="0" ng-model="projection.inexactParameters.tempoErrorRange"></td></tr>
       
-  <tr><td><label>Inexact matching, notes:</label></td>
+  <tr><td>Inexact matching, notes:</td>
       <td></td></tr>
   <tr><td><label>Note insert cost (default 1)</label></td>
       <td><input type="number" step="0.1" min="0" ng-model="projection.inexactParameters.noteInsertError"></td></tr>
