added polyphonicGap support; some fixes to audio note time alignment

--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -108,7 +108,7 @@
 <div ng-show="topTab==3">
 	<!-- <h4>2. Note Filter/Grouping</h4> -->
 	
-	<p class="tab-intro">Specify how notes are selected and grouped into phrases for matching:</p>
+	<p class="tab-intro">Specify how notes are selected and grouped into phrases for matching (these default values can be overridden in each profile):</p>
 	
     <mus-filter-parameters parameters="parameters"></mus-filter-parameters>
 		
