--- a/server/public/partials/mus-projection.html
+++ b/server/public/partials/mus-projection.html
@@ -3,14 +3,14 @@
       <td><input type="text" ng-model="projection.id"></td></tr>
 </tbody></table>
   
-<mus-filter-parameters parameters="projection.filterParameters"></mus-filter-parameters>
-      
 <table><tbody>
   <tr><td>Quantisation:</td></tr>
-  <tr><td><label>Beat Quantisation (per beat)</label></td>
-      <td><input type="number" step="1" min="0" ng-model="projection.countsPerBeat"></td></tr>
   <tr><td><label>Pitch Quantisation (per semitone)</label></td>
       <td><input type="number" step="1" min="0" ng-model="projection.pitchesPerSemitone"></td></tr>
+  <tr><td><label>Beat Quantisation (per beat)</label></td>
+      <td><input type="number" step="1" min="0" ng-model="projection.countsPerBeat"></td></tr>
+  <tr><td><label>If polyphonic, minimum gap between chords (seconds)</label></td>
+	  <td><input type="number" step="0.01" ng-model="projection.polyphonicGap"></td></tr>
   <tr><td>Inexact matching, timing:</td>
       <td></td></tr>
   <tr><td><label>Delay cost (default 1)</label></td>
@@ -38,3 +38,7 @@
       <td><input type="number" step="0.1" min="0" ng-model="projection.inexactParameters.noteErrorRange"></td></tr>
 
 </tbody></table>
+
+<p>Profile-specific note filter:</p>
+<mus-filter-parameters parameters="projection.filterParameters"></mus-filter-parameters>
+      
