--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -224,6 +224,7 @@
 
 	<p class="tab-intro">Specify codes and actions to be performed:</p>
 	<datalist id="action-prefixes"><option value="http:"><option value="https:"><option value="data:text/plain,"><option value="osc.udp:"><option value="data:text/x-midi-hex,"></datalist>
+	<datalist id="action-content-types"><option value="text/plan"><option value="application/json"><option value="application/x-www-form-urlencoded"></datalist>
 
   <ul class="markers">
     <li ng-repeat="marker in markers" ng-controller="MarkerCtrl" class="marker">
@@ -257,7 +258,11 @@
           <label>Channel:</label>
           <input type="text" size="10" ng-model="action.channel">
           <label>URL:</label>
-          <input type="text" ng-model="action.url" list="action-prefixes" size="60"> <urlchecker ng-model="action.url" parameters="parameters"></urlchecker>
+          <input type="text" ng-model="action.url" list="action-prefixes" size="60">
+            <label ng-if="action.url.indexOf('http')==0">Post:<input ng-if="action.url.indexOf('http')==0" type="checkbox" ng-model="action.post"></label>
+            <input ng-if="action.post" type="text" ng-model="action.body">
+            <label ng-if="action.post">Content type:</label><input  ng-if="action.post"type="text" ng-model="action.contentType" list="action-content-types">
+            <urlchecker ng-model="action.url" parameters="parameters"></urlchecker>
           <button ng-click="deleteAction($index)" aria-label="Remove action"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
         </li>
         <li >
@@ -323,7 +328,11 @@
           <label>Channel:</label>
           <input type="text" size="10" ng-model="action.channel">
           <label>URL:</label>
-          <input type="text" ng-model="action.url" list="action-prefixes" size="60"> <urlchecker ng-model="action.url" parameters="parameters"></urlchecker>
+          <input type="text" ng-model="action.url" list="action-prefixes" size="60">
+            <label ng-if="action.url.indexOf('http')==0">Post:<input ng-if="action.url.indexOf('http')==0" type="checkbox" ng-model="action.post"></label>
+            <input ng-if="action.post" type="text" ng-model="action.body">
+            <label ng-if="action.post">Content type:</label><input  ng-if="action.post"type="text" ng-model="action.contentType" list="action-content-types">
+            <urlchecker ng-model="action.url" parameters="parameters"></urlchecker>
           <button ng-click="deleteAction($index)" aria-label="Remove action"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
         </li>
         <li >
