added button: and key: actions

--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -305,7 +305,7 @@
 	</table>
 	
 	
-	<datalist id="control-prefixes"><option value="event:load"><option value="event:start"><option value="event:end"><!-- <option value="osc.udp:///">  --><option value="data:text/x-midi-hex,"><option value="post:"></datalist>
+	<datalist id="control-prefixes"><option value="event:load"><option value="event:start"><option value="event:end"><!-- <option value="osc.udp:///">  --><option value="data:text/x-midi-hex,"><option value="post:"><option value="button:"></datalist>
 
   <ul class="markers">
     <li ng-repeat="control in controls" ng-controller="ControlCtrl" class="marker">
