--- a/server/public/partials/mus-filter-parameters.html
+++ b/server/public/partials/mus-filter-parameters.html
@@ -29,6 +29,10 @@
 				ng-model="parameters.streamGap"></td>
 		</tr>
 		<tr>
+			<td><label>Gap timed from note off (not on)</label></td>
+			<td><input type="checkbox" ng-model="parameters.useNoteOff"></td>
+		</tr>
+		<tr>
 			<td><label>Maximum note duration (seconds)</label></td>
 			<td><input type="number" step="0.01"
 				ng-model="parameters.maxDuration"></td>
