--- a/server/public/partials/mus-action.html
+++ b/server/public/partials/mus-action.html
@@ -6,7 +6,7 @@
             <label ng-if="action.url.indexOf('http')==0 || action.url.indexOf('{{')==0 || action.post">Post:<input type="checkbox" ng-model="action.post"></label>
             <input ng-if="action.post" type="text" ng-model="action.body">
             <label ng-if="action.post">Content type:</label><input  ng-if="action.post"type="text" ng-model="action.contentType" list="action-content-types">
-            <label ng-if="action.url.indexOf('delay:')==0">Delay<input ng-model="action.delay" max="10000" placeholder="seconds" type="number" step="0.001" min="0"></label>
+            <label ng-if="action.url.indexOf('delay:')==0">Delay<input ng-model="action.delay" type="text"></label>
             <label ng-if="action.url.indexOf('delay:')==0">Params
 					<div class="var" ng-repeat="(var,value) in action.params">
 						<span>{{var}}</span>=<input type="text" size="6"
