added support for emit: action and redis socket.io adapter (to link to mobile app)

--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -223,7 +223,7 @@
   <!-- <h4>6. Codes and Actions</h4> -->
 
 	<p class="tab-intro">Specify codes and actions to be performed:</p>
-	<datalist id="action-prefixes"><option value="http:"><option value="https:"><option value="data:text/plain,"><option value="osc.udp:"><option value="data:text/x-midi-hex,"><option value="delay:"><option value="cancel:"></datalist>
+	<datalist id="action-prefixes"><option value="http:"><option value="https:"><option value="data:text/plain,"><option value="osc.udp:"><option value="data:text/x-midi-hex,"><option value="delay:"><option value="cancel:"><option value="emit:"></datalist>
 	<datalist id="action-content-types"><option value="text/plain"><option value="application/json"><option value="application/x-www-form-urlencoded"></datalist>
 
   <ul class="markers">
